Issue #7544: Preallocate thread memory before creating the thread to avoid a fatal error in low memory condition.